--- a/Dashbord -9.08.2022/assets/css/style.css
+++ b/Dashbord -9.08.2022/assets/css/style.css
@@ -236,8 +236,10 @@ img{
 }
 
 /* =============================== start main css ==========================================*/
+
+/* =============================== start table css ==========================================*/
 .table-wrapper{
-   width: 50%;
+   width: 100%;
    background-color: white;
    padding:20px;
    margin-top: 35px;  
@@ -270,7 +272,10 @@ table {
    margin-right: 50px;
    
  }
-
+.side-table-image{
+   width: 50%;
+   height: auto;
+}
 
 /*
 ============================== start media Query==========================================*/
