--- a/Create-Dynamic-table/assets/css/style.css
+++ b/Create-Dynamic-table/assets/css/style.css
@@ -27,16 +27,12 @@ html,body{
 
 
 /* ================================ table */
-.main-wrapper{
-    width: 100%;
-    height: 100vh;
-    background-color: black;  
-}
+
 
 .table-wrapper{
     width:100%;
     height: 100vh;
-    background-color: rgb(229, 236, 236);   
+    background-color: rgb(127, 174, 189);   
 }
 .table-wrapper h1{
    text-align: center;
@@ -44,8 +40,15 @@ html,body{
     margin:20px 0px ;
 }
 /* search box */
+.input-div {
+  width: 100%;
+  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 .input-div form input {
-   padding: 20px 400px 15px 10px;
+   padding: 20px 300px 15px 10px;
    border-radius: 20px;
    outline: none;
    border: 3px solid rgb(100, 74, 74);
@@ -62,7 +65,7 @@ html,body{
     outline: none;
     border: none;;
     padding: 12px 26px ;
-    background-color: black;
+    background-color: rgb(17, 57, 75);
     box-shadow: 0px 0px 5px #000; 
     color: white;
     font-size: 21px;
@@ -87,14 +90,13 @@ html,body{
     font-size: 20px;
     padding: 10px 30px;
     outline: none;
-    background-color: black;
+    background-color: rgb(17, 85, 112);
     color: white;
-   margin-right: 600px;
    
   }
 
   .add-button:hover{
-    background-color: red;
+    background-color: rgb(21, 143, 92);
    
   }
 /*  main table  */
@@ -108,17 +110,18 @@ html,body{
     border: 1px solid #ddd;
     padding: 8px;
     font-size: 20PX;
-    padding: 10px 150px;
+    padding: 10px 10px;
+    text-align: center;
   }
   
-  #myTable tr:nth-child(even){background-color: #f2f2f2;}
+  #myTable tr:nth-child(odd){background-color: #b7cccc;}
   
   #myTable tr:hover {background-color: #ddd;}
   
   #myTable th {
     padding-top: 12px;
     padding-bottom: 12px;
-    text-align: left;
+    text-align: center;
     background-color: #04AA6D;
     color: white;
   }
@@ -176,3 +179,6 @@ div {
     background-color: #066406;
   }
   
+ .none-record{
+  display: none;
+ }
