--- a/Dashbord-22.08.2022/assets/css/style.css
+++ b/Dashbord-22.08.2022/assets/css/style.css
@@ -48,7 +48,7 @@ html,body{
     background-color: var(--white);
     border-bottom: 1px solid var(--black2);
     
-    ;
+    
     
 }
 .toggle{
@@ -123,7 +123,7 @@ html,body{
     margin-bottom: 10px; 
 }
 .navigation ul li a{
-   /* position: relative; */
+   position: relative;
    /* display: block; */
    width: 100%;
    display: flex;
@@ -135,6 +135,15 @@ html,body{
     background-color:hsl(132deg 63% 97%);
 }
 
+li:hover li:hover::before{
+content: "";
+position: absolute;
+background-color: var(--green);
+height: 100%;
+width: 4px;
+top: 0;
+left: 0;
+}
 
 .navigation ul li a .icon{
   position: relative;
@@ -165,6 +174,7 @@ html,body{
     min-height: 100vh;
     background:var(--white);
     transition: 0.2s;
+    
 }
 
 
