--- a/Dashbord-22.08.2022/assets/css/style.css
+++ b/Dashbord-22.08.2022/assets/css/style.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Poppins:wght@100;200;300;400;500;600&display=swap');
 /* Universal css */
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 html,body{
     width: 100%;
