--- a/Bootstrap-30.08.2022/assets/scss/base/_golobal.scss
+++ b/Bootstrap-30.08.2022/assets/scss/base/_golobal.scss
@@ -1,7 +1,14 @@
+*{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 html,body{
     width: 100%;
     height: 100%;
+    // list-style: none;
 }
 
 
