--- a/Bootstrap-30.08.2022/assets/scss/base/_variable.scss
+++ b/Bootstrap-30.08.2022/assets/scss/base/_variable.scss
@@ -1,13 +1,17 @@
 $primary:hsl(208deg 96% 53%);
 $body-bg :hsl(229deg 20% 17%);
-
+// aside color
 $aside-bg:hsl(228deg 22% 13%);
+
 
 $nav-link-color:hsl(228deg 6% 31%);
 
-$border-radius:6px;
+$border-radius:8px;
 
 // single card color
-$card-color:hsl(228deg 19% 20%)
+$card-color:hsl(228deg 19% 20%);
 
+$border-color:white;
+
+$table-color:white;
 
