--- a/Bootstrap-30.08.2022/assets/scss/vander/boostrap-components.scss
+++ b/Bootstrap-30.08.2022/assets/scss/vander/boostrap-components.scss
@@ -8,3 +8,5 @@
 @import "../../../node_modules/bootstrap/scss/utilities/api";
 @import "../../../node_modules/bootstrap/scss/nav";
 @import "../../../node_modules/bootstrap/scss/buttons";
+@import "../../../node_modules/bootstrap/scss/navbar";
+@import "../../../node_modules/bootstrap/scss/tables";
