--- a/Bootstrap-30.08.2022/assets/scss/base/_variable.scss
+++ b/Bootstrap-30.08.2022/assets/scss/base/_variable.scss
@@ -1,4 +1,6 @@
+
 $primary:hsl(208deg 96% 53%);
+
 $body-bg :hsl(229deg 20% 17%);
 // aside color
 $aside-bg:hsl(228deg 22% 13%);
@@ -14,4 +16,5 @@ $card-color:hsl(228deg 19% 20%);
 $border-color:white;
 
 $table-color:white;
+$table-border-width:0;
 
