--- a/Bootstrap-30.08.2022/assets/scss/component/_card.scss
+++ b/Bootstrap-30.08.2022/assets/scss/component/_card.scss
@@ -1,18 +1,17 @@
 .card{
-    flex: 0 0 200px;
-    max-width: 250px;
-   
-   background-color:$card-color;
-   border-radius: $border-radius;
+    flex: 0 0 300px;
+    max-width: 300px; 
+    height: 100px;
+    background-color:$card-color;
+    border-radius: $border-radius;
 }
+
 .image{
     width: 50px;
     margin-top: -16px;
     transform: rotate(-15deg);
   // justify-content-space-between;
-}
-
-
+} 
 .icon-wraper{
   width: 50px;
   height: 50px;
@@ -20,6 +19,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius:$border-radius  ;
   
 }
 
