--- a/Bootstrap-30.08.2022/assets/scss/layout/_harder.scss
+++ b/Bootstrap-30.08.2022/assets/scss/layout/_harder.scss
@@ -5,29 +5,37 @@
 }
 input[type=text] {
     width: 100%;
-    padding: 15px 60px;
+   padding: 14px 70px;
     border-radius: $border-radius;
     background-color:$aside-bg;
     color: white;
-    outline: none;
     border: none;
- 
+    outline: none;
+
+
+   }
+
+
+   .input-group{
+    background-color:$body-bg;
+    &-text{
+
+     color: white;
+    }
    }
    
- 
-  
-//    .search-icon {
-//      position: absolute;
-//      top: 16px;
-//      left: 24px;
+   .search-icon {
+     position: absolute;
+     top: 16px;
+     left: 24px;
    
-//    }
-//    .filter-icon{
-//      position: absolute;
-//      top: 16px;
-//      left: 700px;
-//    }
-
+   }
+   .filter-icon{
+     position: absolute;
+     top: 10px;
+     right: 20px;
+     font-size: 20px;
+   }
    .rounded-circle1{
     width: 55px;
     height: 55px;
@@ -36,8 +44,6 @@ input[type=text] {
     background-color: $aside-bg;
     margin-left: 15px;
    }
-   
-
   .icon{
     font-size: 20px;
   }
