--- a/bootstrap-assesment-task/assets/css/styles.css
+++ b/bootstrap-assesment-task/assets/css/styles.css
@@ -1,3 +1,7 @@
+.boxshadow {
+  box-shadow: 0 0.5rem 1rem rgba(29, 165, 151, 0.3);
+}
+
 * {
   padding-left: 0;
   padding-right: 0;
@@ -8,6 +12,33 @@
 body {
   width: 100%;
   height: 100%;
+  overflow: hidden;
+}
+
+section {
+  height: 550px;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #c1c1c1;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #c1c1c1;
 }
 
 :root {
@@ -18,7 +49,7 @@ body {
   --bs-red: #dc3545;
   --bs-orange: #fd7e14;
   --bs-yellow: #ffc107;
-  --bs-green: #198754;
+  --bs-green: #e8f5f5;
   --bs-teal: #20c997;
   --bs-cyan: #0dcaf0;
   --bs-black: black;
@@ -36,7 +67,7 @@ body {
   --bs-gray-900: #212529;
   --bs-primary: #1da597;
   --bs-secondary: #a1adb6;
-  --bs-success: #198754;
+  --bs-success: #e8f5f5;
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
   --bs-danger: #dc3545;
@@ -44,7 +75,7 @@ body {
   --bs-dark: #212529;
   --bs-primary-rgb: 29, 165, 151;
   --bs-secondary-rgb: 161, 173, 182;
-  --bs-success-rgb: 25, 135, 84;
+  --bs-success-rgb: 232, 245, 245;
   --bs-info-rgb: 13, 202, 240;
   --bs-warning-rgb: 255, 193, 7;
   --bs-danger-rgb: 220, 53, 69;
@@ -1613,8 +1644,8 @@ progress {
 }
 
 .text-bg-success {
-  color: #fff !important;
-  background-color: RGBA(25, 135, 84, var(--bs-bg-opacity, 1)) !important;
+  color: black !important;
+  background-color: RGBA(232, 245, 245, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-info {
@@ -1657,10 +1688,10 @@ progress {
 }
 
 .link-success {
-  color: #198754 !important;
+  color: #e8f5f5 !important;
 }
 .link-success:hover, .link-success:focus {
-  color: #146c43 !important;
+  color: #edf7f7 !important;
 }
 
 .link-info {
@@ -1984,7 +2015,7 @@ progress {
 }
 
 .shadow {
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2) !important;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25) !important;
 }
 
 .shadow-sm {
@@ -6024,20 +6055,20 @@ progress {
 }
 
 .btn-success {
-  --bs-btn-color: #fff;
-  --bs-btn-bg: #198754;
-  --bs-btn-border-color: #198754;
-  --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #157347;
-  --bs-btn-hover-border-color: #146c43;
-  --bs-btn-focus-shadow-rgb: 60, 153, 110;
-  --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #146c43;
-  --bs-btn-active-border-color: #13653f;
+  --bs-btn-color: black;
+  --bs-btn-bg: #e8f5f5;
+  --bs-btn-border-color: #e8f5f5;
+  --bs-btn-hover-color: black;
+  --bs-btn-hover-bg: #ebf7f7;
+  --bs-btn-hover-border-color: #eaf6f6;
+  --bs-btn-focus-shadow-rgb: 197, 208, 208;
+  --bs-btn-active-color: black;
+  --bs-btn-active-bg: #edf7f7;
+  --bs-btn-active-border-color: #eaf6f6;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #198754;
-  --bs-btn-disabled-border-color: #198754;
+  --bs-btn-disabled-color: black;
+  --bs-btn-disabled-bg: #e8f5f5;
+  --bs-btn-disabled-border-color: #e8f5f5;
 }
 
 .btn-info {
@@ -6160,19 +6191,19 @@ progress {
 }
 
 .btn-outline-success {
-  --bs-btn-color: #198754;
-  --bs-btn-border-color: #198754;
-  --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #198754;
-  --bs-btn-hover-border-color: #198754;
-  --bs-btn-focus-shadow-rgb: 25, 135, 84;
-  --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #198754;
-  --bs-btn-active-border-color: #198754;
+  --bs-btn-color: #e8f5f5;
+  --bs-btn-border-color: #e8f5f5;
+  --bs-btn-hover-color: black;
+  --bs-btn-hover-bg: #e8f5f5;
+  --bs-btn-hover-border-color: #e8f5f5;
+  --bs-btn-focus-shadow-rgb: 232, 245, 245;
+  --bs-btn-active-color: black;
+  --bs-btn-active-bg: #e8f5f5;
+  --bs-btn-active-border-color: #e8f5f5;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #198754;
+  --bs-btn-disabled-color: #e8f5f5;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #198754;
+  --bs-btn-disabled-border-color: #e8f5f5;
   --bs-gradient: none;
 }
 
@@ -6826,13 +6857,13 @@ progress {
 
 .table-success {
   --bs-table-color: black;
-  --bs-table-bg: #d1e7dd;
-  --bs-table-border-color: #bcd0c7;
-  --bs-table-striped-bg: #c7dbd2;
+  --bs-table-bg: #fafdfd;
+  --bs-table-border-color: #e1e4e4;
+  --bs-table-striped-bg: #eef0f0;
   --bs-table-striped-color: black;
-  --bs-table-active-bg: #bcd0c7;
+  --bs-table-active-bg: #e1e4e4;
   --bs-table-active-color: black;
-  --bs-table-hover-bg: #c1d6cc;
+  --bs-table-hover-bg: #e7eaea;
   --bs-table-hover-color: black;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -7564,7 +7595,7 @@ textarea.form-control-lg {
   width: 100%;
   margin-top: 0.25rem;
   font-size: 0.875em;
-  color: #198754;
+  color: #e8f5f5;
 }
 
 .valid-tooltip {
@@ -7576,8 +7607,8 @@ textarea.form-control-lg {
   padding: 0.25rem 0.5rem;
   margin-top: 0.1rem;
   font-size: 0.875rem;
-  color: #fff;
-  background-color: rgba(25, 135, 84, 0.9);
+  color: black;
+  background-color: rgba(232, 245, 245, 0.9);
   border-radius: 0.375rem;
 }
 
@@ -7589,16 +7620,16 @@ textarea.form-control-lg {
 }
 
 .was-validated .form-control:valid, .form-control.is-valid {
-  border-color: #198754;
+  border-color: #e8f5f5;
   padding-right: calc(1.5em + 0.75rem);
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23198754' d='M2.3 6.73.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23e8f5f5' d='M2.3 6.73.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
   background-position: right calc(0.375em + 0.1875rem) center;
   background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
 }
 .was-validated .form-control:valid:focus, .form-control.is-valid:focus {
-  border-color: #198754;
-  box-shadow: 0 0 0 0.25rem rgba(25, 135, 84, 0.25);
+  border-color: #e8f5f5;
+  box-shadow: 0 0 0 0.25rem rgba(232, 245, 245, 0.25);
 }
 
 .was-validated textarea.form-control:valid, textarea.form-control.is-valid {
@@ -7607,17 +7638,17 @@ textarea.form-control-lg {
 }
 
 .was-validated .form-select:valid, .form-select.is-valid {
-  border-color: #198754;
+  border-color: #e8f5f5;
 }
 .was-validated .form-select:valid:not([multiple]):not([size]), .was-validated .form-select:valid:not([multiple])[size="1"], .form-select.is-valid:not([multiple]):not([size]), .form-select.is-valid:not([multiple])[size="1"] {
   padding-right: 4.125rem;
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e"), url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23198754' d='M2.3 6.73.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e"), url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23e8f5f5' d='M2.3 6.73.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
   background-position: right 0.75rem center, center right 2.25rem;
   background-size: 16px 12px, calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
 }
 .was-validated .form-select:valid:focus, .form-select.is-valid:focus {
-  border-color: #198754;
-  box-shadow: 0 0 0 0.25rem rgba(25, 135, 84, 0.25);
+  border-color: #e8f5f5;
+  box-shadow: 0 0 0 0.25rem rgba(232, 245, 245, 0.25);
 }
 
 .was-validated .form-control-color:valid, .form-control-color.is-valid {
@@ -7625,16 +7656,16 @@ textarea.form-control-lg {
 }
 
 .was-validated .form-check-input:valid, .form-check-input.is-valid {
-  border-color: #198754;
+  border-color: #e8f5f5;
 }
 .was-validated .form-check-input:valid:checked, .form-check-input.is-valid:checked {
-  background-color: #198754;
+  background-color: #e8f5f5;
 }
 .was-validated .form-check-input:valid:focus, .form-check-input.is-valid:focus {
-  box-shadow: 0 0 0 0.25rem rgba(25, 135, 84, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(232, 245, 245, 0.25);
 }
 .was-validated .form-check-input:valid ~ .form-check-label, .form-check-input.is-valid ~ .form-check-label {
-  color: #198754;
+  color: #e8f5f5;
 }
 
 .form-check-inline .form-check-input ~ .valid-feedback {
@@ -7745,13 +7776,37 @@ textarea.form-control-lg {
   z-index: 3;
 }
 
+main {
+  background-color: #fafbfd;
+  height: 100%;
+  overflow-y: auto;
+}
 main .row .card {
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25);
+}
+
+.table-body {
+  height: 400px;
+  position: relative;
+}
+
+.table {
+  position: relative;
+}
+
+.sticky {
+  position: fixed;
+  width: 40%;
+  background-color: aqua;
 }
 
 aside {
-  width: 250px;
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+  width: 300px;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25);
+  height: 100%;
+}
+aside .nav > :first-child {
+  pointer-events: none;
 }
 aside .nav-item {
   position: relative;
@@ -7774,13 +7829,18 @@ aside .nav-item.active::after {
 }
 aside .nav-item:hover {
   background-color: rgba(29, 165, 151, 0.2);
+  transition: all 4s ease;
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  -ms-transition: all 1s ease;
 }
 aside .nav-link .icon-size {
   font-size: 25px;
 }
 
 header {
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25);
 }
 header nav .collapse .form-expand {
   position: relative;
@@ -7803,6 +7863,10 @@ header nav .collapse .form-expand .fa-magnifying-glass {
 }
 .image-profile img {
   width: 100%;
+}
+
+.font-size-totification {
+  font-size: 20px;
 }
 
 /*# sourceMappingURL=styles.css.map */
