--- a/bootstrap-assesment-task/assets/scss/base/_global.scss
+++ b/bootstrap-assesment-task/assets/scss/base/_global.scss
@@ -10,5 +10,31 @@
 body{
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
+section{
+    height: 550px;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #c1c1c1; 
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #c1c1c1; 
+  }
