--- a/bootstrap-assesment-task/assets/scss/base/_variable.scss
+++ b/bootstrap-assesment-task/assets/scss/base/_variable.scss
@@ -6,4 +6,13 @@ $secondary: #a1adb6;
 $nav-font-icon-size:25px;
 $black:black;
 // box shadow
-$box-shadow:  0 .5rem 1rem rgba($black, .20);
+$box-shadow:  0 .5rem 1rem rgba($black, .25);
+// button
+$green:#e8f5f5;
+// buuton
+$box-shadow-button:  0 .5rem 1rem rgba($primary, .30);
+
+
+.boxshadow{
+    box-shadow: $box-shadow-button;
+}
