--- a/bootstrap-assesment-task/assets/scss/base/_variable.scss
+++ b/bootstrap-assesment-task/assets/scss/base/_variable.scss
@@ -6,7 +6,7 @@ $secondary: #a1adb6;
 $nav-font-icon-size:25px;
 $black:black;
 // box shadow
-$box-shadow:  0 .5rem 1rem rgba($black, .25);
+$box-shadow:  0 .5rem 1rem rgba(grey, .25);
 // button
 $green:#e8f5f5;
 // buuton
