--- a/bootstrap-assesment-task/assets/scss/component/_table.scss
+++ b/bootstrap-assesment-task/assets/scss/component/_table.scss
@@ -1,7 +1,10 @@
 .table-body{
-    height: 400px;
+    height: 500px;
     position: relative;
   
+}
+.card{
+z-index: 1;
 }
 .table {
     position: relative;
