--- a/bootstrap-assesment-task/assets/css/styles.css
+++ b/bootstrap-assesment-task/assets/css/styles.css
@@ -15,10 +15,6 @@ body {
   overflow: hidden;
 }
 
-section {
-  height: 550px;
-}
-
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
@@ -2015,7 +2011,7 @@ progress {
 }
 
 .shadow {
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25) !important;
+  box-shadow: 0 0.5rem 1rem rgba(128, 128, 128, 0.25) !important;
 }
 
 .shadow-sm {
@@ -7782,12 +7778,16 @@ main {
   overflow-y: auto;
 }
 main .row .card {
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0.5rem 1rem rgba(128, 128, 128, 0.25);
 }
 
 .table-body {
-  height: 400px;
+  height: 500px;
   position: relative;
+}
+
+.card {
+  z-index: 1;
 }
 
 .table {
@@ -7801,9 +7801,9 @@ main .row .card {
 }
 
 aside {
-  width: 300px;
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25);
-  height: 100%;
+  z-index: 1;
+  width: 230px;
+  box-shadow: 0 0.5rem 1rem rgba(128, 128, 128, 0.25);
 }
 aside .nav > :first-child {
   pointer-events: none;
@@ -7840,11 +7840,11 @@ aside .nav-link .icon-size {
 }
 
 header {
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0.5rem 1rem rgba(128, 128, 128, 0.25);
 }
 header nav .collapse .form-expand {
   position: relative;
-  width: 75%;
+  width: 83%;
 }
 header nav .collapse .form-expand .form-contro {
   padding: 10px 40px 10px 40px;
