--- a/bootstrap-assesment-task/assets/scss/base/_global.scss
+++ b/bootstrap-assesment-task/assets/scss/base/_global.scss
@@ -10,12 +10,12 @@
 body{
     width: 100%;
     height: 100%;
-    overflow: hidden;
+ overflow: hidden;
 }
 
-section{
-    height: 550px;
-}
+// section{
+//     height: 550px;
+// }
 
 /* width */
 ::-webkit-scrollbar {
