--- a/bootstrap-assesment-tasks/assets/scss/component/_card.scss
+++ b/bootstrap-assesment-tasks/assets/scss/component/_card.scss
@@ -4,7 +4,7 @@
     overflow-y: auto;
     .row{
         .card{
-            // box-shadow: $box-shadow;
+ box-shadow: $box-shadow;
             background-color: white;
         }
     }
