--- a/bootstrap-assesment-tasks/assets/css/styles.css
+++ b/bootstrap-assesment-tasks/assets/css/styles.css
@@ -42,6 +42,18 @@ html, body {
   box-shadow: 0 0.3rem 0.7rem rgba(156, 156, 156, 0.1);
 }
 
+.font-color {
+  color: #879ba6;
+}
+
+.icon-font-size-14 {
+  font-size: 14px;
+}
+
+.font-size-totification {
+  font-size: 20px;
+}
+
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
@@ -53,7 +65,7 @@ html, body {
   --bs-green: #e8f5f5;
   --bs-teal: #20c997;
   --bs-cyan: #0dcaf0;
-  --bs-black: black;
+  --bs-black: #000;
   --bs-white: #fff;
   --bs-gray: #6c757d;
   --bs-gray-dark: #343a40;
@@ -1635,27 +1647,27 @@ progress {
 }
 
 .text-bg-primary {
-  color: black !important;
+  color: #000 !important;
   background-color: RGBA(29, 165, 151, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-secondary {
-  color: black !important;
+  color: #000 !important;
   background-color: RGBA(201, 205, 209, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-success {
-  color: black !important;
+  color: #000 !important;
   background-color: RGBA(232, 245, 245, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-info {
-  color: black !important;
+  color: #000 !important;
   background-color: RGBA(13, 202, 240, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-warning {
-  color: black !important;
+  color: #000 !important;
   background-color: RGBA(255, 193, 7, var(--bs-bg-opacity, 1)) !important;
 }
 
@@ -1665,7 +1677,7 @@ progress {
 }
 
 .text-bg-light {
-  color: black !important;
+  color: #000 !important;
   background-color: RGBA(248, 249, 250, var(--bs-bg-opacity, 1)) !important;
 }
 
@@ -6022,86 +6034,86 @@ progress {
 }
 
 .btn-primary {
-  --bs-btn-color: black;
+  --bs-btn-color: #000;
   --bs-btn-bg: #1da597;
   --bs-btn-border-color: #1da597;
-  --bs-btn-hover-color: black;
+  --bs-btn-hover-color: #000;
   --bs-btn-hover-bg: #3fb3a7;
   --bs-btn-hover-border-color: #34aea1;
   --bs-btn-focus-shadow-rgb: 25, 140, 128;
-  --bs-btn-active-color: black;
+  --bs-btn-active-color: #000;
   --bs-btn-active-bg: #4ab7ac;
   --bs-btn-active-border-color: #34aea1;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: black;
+  --bs-btn-disabled-color: #000;
   --bs-btn-disabled-bg: #1da597;
   --bs-btn-disabled-border-color: #1da597;
 }
 
 .btn-secondary {
-  --bs-btn-color: black;
+  --bs-btn-color: #000;
   --bs-btn-bg: rgba(201, 205, 209, 0.973);
   --bs-btn-border-color: rgba(201, 205, 209, 0.973);
-  --bs-btn-hover-color: black;
+  --bs-btn-hover-color: #000;
   --bs-btn-hover-bg: rgba(209, 213, 216, 0.97705);
   --bs-btn-hover-border-color: rgba(207, 210, 214, 0.9757);
   --bs-btn-focus-shadow-rgb: 169, 173, 176;
-  --bs-btn-active-color: black;
+  --bs-btn-active-color: #000;
   --bs-btn-active-bg: rgba(212, 215, 219, 0.9784);
   --bs-btn-active-border-color: rgba(207, 210, 214, 0.9757);
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: black;
+  --bs-btn-disabled-color: #000;
   --bs-btn-disabled-bg: rgba(201, 205, 209, 0.973);
   --bs-btn-disabled-border-color: rgba(201, 205, 209, 0.973);
 }
 
 .btn-success {
-  --bs-btn-color: black;
+  --bs-btn-color: #000;
   --bs-btn-bg: #e8f5f5;
   --bs-btn-border-color: #e8f5f5;
-  --bs-btn-hover-color: black;
+  --bs-btn-hover-color: #000;
   --bs-btn-hover-bg: #ebf7f7;
   --bs-btn-hover-border-color: #eaf6f6;
   --bs-btn-focus-shadow-rgb: 197, 208, 208;
-  --bs-btn-active-color: black;
+  --bs-btn-active-color: #000;
   --bs-btn-active-bg: #edf7f7;
   --bs-btn-active-border-color: #eaf6f6;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: black;
+  --bs-btn-disabled-color: #000;
   --bs-btn-disabled-bg: #e8f5f5;
   --bs-btn-disabled-border-color: #e8f5f5;
 }
 
 .btn-info {
-  --bs-btn-color: black;
+  --bs-btn-color: #000;
   --bs-btn-bg: #0dcaf0;
   --bs-btn-border-color: #0dcaf0;
-  --bs-btn-hover-color: black;
+  --bs-btn-hover-color: #000;
   --bs-btn-hover-bg: #31d2f2;
   --bs-btn-hover-border-color: #25cff2;
   --bs-btn-focus-shadow-rgb: 11, 172, 204;
-  --bs-btn-active-color: black;
+  --bs-btn-active-color: #000;
   --bs-btn-active-bg: #3dd5f3;
   --bs-btn-active-border-color: #25cff2;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: black;
+  --bs-btn-disabled-color: #000;
   --bs-btn-disabled-bg: #0dcaf0;
   --bs-btn-disabled-border-color: #0dcaf0;
 }
 
 .btn-warning {
-  --bs-btn-color: black;
+  --bs-btn-color: #000;
   --bs-btn-bg: #ffc107;
   --bs-btn-border-color: #ffc107;
-  --bs-btn-hover-color: black;
+  --bs-btn-hover-color: #000;
   --bs-btn-hover-bg: #ffca2c;
   --bs-btn-hover-border-color: #ffc720;
   --bs-btn-focus-shadow-rgb: 217, 164, 6;
-  --bs-btn-active-color: black;
+  --bs-btn-active-color: #000;
   --bs-btn-active-bg: #ffcd39;
   --bs-btn-active-border-color: #ffc720;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: black;
+  --bs-btn-disabled-color: #000;
   --bs-btn-disabled-bg: #ffc107;
   --bs-btn-disabled-border-color: #ffc107;
 }
@@ -6124,18 +6136,18 @@ progress {
 }
 
 .btn-light {
-  --bs-btn-color: black;
+  --bs-btn-color: #000;
   --bs-btn-bg: #f8f9fa;
   --bs-btn-border-color: #f8f9fa;
-  --bs-btn-hover-color: black;
+  --bs-btn-hover-color: #000;
   --bs-btn-hover-bg: #d3d4d5;
   --bs-btn-hover-border-color: #c6c7c8;
   --bs-btn-focus-shadow-rgb: 211, 212, 213;
-  --bs-btn-active-color: black;
+  --bs-btn-active-color: #000;
   --bs-btn-active-bg: #c6c7c8;
   --bs-btn-active-border-color: #babbbc;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: black;
+  --bs-btn-disabled-color: #000;
   --bs-btn-disabled-bg: #f8f9fa;
   --bs-btn-disabled-border-color: #f8f9fa;
 }
@@ -6160,11 +6172,11 @@ progress {
 .btn-outline-primary {
   --bs-btn-color: #1da597;
   --bs-btn-border-color: #1da597;
-  --bs-btn-hover-color: black;
+  --bs-btn-hover-color: #000;
   --bs-btn-hover-bg: #1da597;
   --bs-btn-hover-border-color: #1da597;
   --bs-btn-focus-shadow-rgb: 29, 165, 151;
-  --bs-btn-active-color: black;
+  --bs-btn-active-color: #000;
   --bs-btn-active-bg: #1da597;
   --bs-btn-active-border-color: #1da597;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
@@ -6177,11 +6189,11 @@ progress {
 .btn-outline-secondary {
   --bs-btn-color: rgba(201, 205, 209, 0.973);
   --bs-btn-border-color: rgba(201, 205, 209, 0.973);
-  --bs-btn-hover-color: black;
+  --bs-btn-hover-color: #000;
   --bs-btn-hover-bg: rgba(201, 205, 209, 0.973);
   --bs-btn-hover-border-color: rgba(201, 205, 209, 0.973);
   --bs-btn-focus-shadow-rgb: 201, 205, 209;
-  --bs-btn-active-color: black;
+  --bs-btn-active-color: #000;
   --bs-btn-active-bg: rgba(201, 205, 209, 0.973);
   --bs-btn-active-border-color: rgba(201, 205, 209, 0.973);
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
@@ -6194,11 +6206,11 @@ progress {
 .btn-outline-success {
   --bs-btn-color: #e8f5f5;
   --bs-btn-border-color: #e8f5f5;
-  --bs-btn-hover-color: black;
+  --bs-btn-hover-color: #000;
   --bs-btn-hover-bg: #e8f5f5;
   --bs-btn-hover-border-color: #e8f5f5;
   --bs-btn-focus-shadow-rgb: 232, 245, 245;
-  --bs-btn-active-color: black;
+  --bs-btn-active-color: #000;
   --bs-btn-active-bg: #e8f5f5;
   --bs-btn-active-border-color: #e8f5f5;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
@@ -6211,11 +6223,11 @@ progress {
 .btn-outline-info {
   --bs-btn-color: #0dcaf0;
   --bs-btn-border-color: #0dcaf0;
-  --bs-btn-hover-color: black;
+  --bs-btn-hover-color: #000;
   --bs-btn-hover-bg: #0dcaf0;
   --bs-btn-hover-border-color: #0dcaf0;
   --bs-btn-focus-shadow-rgb: 13, 202, 240;
-  --bs-btn-active-color: black;
+  --bs-btn-active-color: #000;
   --bs-btn-active-bg: #0dcaf0;
   --bs-btn-active-border-color: #0dcaf0;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
@@ -6228,11 +6240,11 @@ progress {
 .btn-outline-warning {
   --bs-btn-color: #ffc107;
   --bs-btn-border-color: #ffc107;
-  --bs-btn-hover-color: black;
+  --bs-btn-hover-color: #000;
   --bs-btn-hover-bg: #ffc107;
   --bs-btn-hover-border-color: #ffc107;
   --bs-btn-focus-shadow-rgb: 255, 193, 7;
-  --bs-btn-active-color: black;
+  --bs-btn-active-color: #000;
   --bs-btn-active-bg: #ffc107;
   --bs-btn-active-border-color: #ffc107;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
@@ -6262,11 +6274,11 @@ progress {
 .btn-outline-light {
   --bs-btn-color: #f8f9fa;
   --bs-btn-border-color: #f8f9fa;
-  --bs-btn-hover-color: black;
+  --bs-btn-hover-color: #000;
   --bs-btn-hover-bg: #f8f9fa;
   --bs-btn-hover-border-color: #f8f9fa;
   --bs-btn-focus-shadow-rgb: 248, 249, 250;
-  --bs-btn-active-color: black;
+  --bs-btn-active-color: #000;
   --bs-btn-active-bg: #f8f9fa;
   --bs-btn-active-border-color: #f8f9fa;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
@@ -6829,99 +6841,99 @@ progress {
 }
 
 .table-primary {
-  --bs-table-color: black;
+  --bs-table-color: #000;
   --bs-table-bg: #d2edea;
   --bs-table-border-color: #bdd5d3;
   --bs-table-striped-bg: #c8e1de;
-  --bs-table-striped-color: black;
+  --bs-table-striped-color: #000;
   --bs-table-active-bg: #bdd5d3;
-  --bs-table-active-color: black;
+  --bs-table-active-color: #000;
   --bs-table-hover-bg: #c2dbd8;
-  --bs-table-hover-color: black;
+  --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
 }
 
 .table-secondary {
-  --bs-table-color: black;
+  --bs-table-color: #000;
   --bs-table-bg: rgba(245, 245, 246, 0.9946);
   --bs-table-border-color: rgba(220, 220, 221, 0.99514);
   --bs-table-striped-bg: rgba(233, 233, 234, 0.99487);
-  --bs-table-striped-color: black;
+  --bs-table-striped-color: #000;
   --bs-table-active-bg: rgba(220, 220, 221, 0.99514);
-  --bs-table-active-color: black;
+  --bs-table-active-color: #000;
   --bs-table-hover-bg: rgba(226, 226, 227, 0.995005);
-  --bs-table-hover-color: black;
+  --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
 }
 
 .table-success {
-  --bs-table-color: black;
+  --bs-table-color: #000;
   --bs-table-bg: #fafdfd;
   --bs-table-border-color: #e1e4e4;
   --bs-table-striped-bg: #eef0f0;
-  --bs-table-striped-color: black;
+  --bs-table-striped-color: #000;
   --bs-table-active-bg: #e1e4e4;
-  --bs-table-active-color: black;
+  --bs-table-active-color: #000;
   --bs-table-hover-bg: #e7eaea;
-  --bs-table-hover-color: black;
+  --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
 }
 
 .table-info {
-  --bs-table-color: black;
+  --bs-table-color: #000;
   --bs-table-bg: #cff4fc;
   --bs-table-border-color: #badce3;
   --bs-table-striped-bg: #c5e8ef;
-  --bs-table-striped-color: black;
+  --bs-table-striped-color: #000;
   --bs-table-active-bg: #badce3;
-  --bs-table-active-color: black;
+  --bs-table-active-color: #000;
   --bs-table-hover-bg: #bfe2e9;
-  --bs-table-hover-color: black;
+  --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
 }
 
 .table-warning {
-  --bs-table-color: black;
+  --bs-table-color: #000;
   --bs-table-bg: #fff3cd;
   --bs-table-border-color: #e6dbb9;
   --bs-table-striped-bg: #f2e7c3;
-  --bs-table-striped-color: black;
+  --bs-table-striped-color: #000;
   --bs-table-active-bg: #e6dbb9;
-  --bs-table-active-color: black;
+  --bs-table-active-color: #000;
   --bs-table-hover-bg: #ece1be;
-  --bs-table-hover-color: black;
+  --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
 }
 
 .table-danger {
-  --bs-table-color: black;
+  --bs-table-color: #000;
   --bs-table-bg: #f8d7da;
   --bs-table-border-color: #dfc2c4;
   --bs-table-striped-bg: #eccccf;
-  --bs-table-striped-color: black;
+  --bs-table-striped-color: #000;
   --bs-table-active-bg: #dfc2c4;
-  --bs-table-active-color: black;
+  --bs-table-active-color: #000;
   --bs-table-hover-bg: #e5c7ca;
-  --bs-table-hover-color: black;
+  --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
 }
 
 .table-light {
-  --bs-table-color: black;
+  --bs-table-color: #000;
   --bs-table-bg: #f8f9fa;
   --bs-table-border-color: #dfe0e1;
   --bs-table-striped-bg: #ecedee;
-  --bs-table-striped-color: black;
+  --bs-table-striped-color: #000;
   --bs-table-active-bg: #dfe0e1;
-  --bs-table-active-color: black;
+  --bs-table-active-color: #000;
   --bs-table-hover-bg: #e5e6e7;
-  --bs-table-hover-color: black;
+  --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
 }
@@ -7608,7 +7620,7 @@ textarea.form-control-lg {
   padding: 0.25rem 0.5rem;
   margin-top: 0.1rem;
   font-size: 0.875rem;
-  color: black;
+  color: #000;
   background-color: rgba(232, 245, 245, 0.9);
   border-radius: 0.375rem;
 }
@@ -7783,26 +7795,12 @@ textarea.form-control-lg {
   overflow-y: auto;
 }
 .main .row .card {
+  box-shadow: 0 0.3rem 0.7rem rgba(156, 156, 156, 0.1);
   background-color: white;
 }
 
 .table-body {
   height: 450px;
-  position: relative;
-}
-
-.card {
-  z-index: 1;
-}
-
-.table {
-  position: relative;
-}
-
-.sticky {
-  position: fixed;
-  width: 40%;
-  background-color: aqua;
 }
 
 aside {
@@ -7814,9 +7812,6 @@ aside .bold {
 }
 aside .logo-header {
   height: 107px;
-}
-aside .nav > :first-child {
-  pointer-events: none;
 }
 aside .nav-link {
   color: rgba(201, 205, 209, 0.973);
@@ -7858,6 +7853,9 @@ ul li {
   flex-grow: 1;
 }
 
+nav {
+  z-index: 5;
+}
 nav .collapse .form-expand {
   position: relative;
 }
@@ -7879,10 +7877,6 @@ nav .collapse .form-expand .fa-magnifying-glass {
 }
 .image-profile img {
   width: 100%;
-}
-
-.font-size-totification {
-  font-size: 20px;
 }
 
 /*# sourceMappingURL=styles.css.map */
