--- a/bootstrap-assesment-tasks/assets/scss/base/_variable.scss
+++ b/bootstrap-assesment-tasks/assets/scss/base/_variable.scss
@@ -4,13 +4,18 @@ $primary:  #1da597;
 $secondary:rgba(201, 205, 209, 0.973);
 // icon size
 $nav-font-icon-size:25px;
-$black:black;
+
 // box shadow
 // $box-shadow:  0 0.4rem 0.7rem hsl(203deg 10% 95%);
-$box-shadow:                  0 0.3rem 0.7rem rgba(rgba(156, 156, 156, 0.308), .10);
-// button
+$box-shadow:    0 0.3rem 0.7rem rgba(rgba(156, 156, 156, 0.308), .10);
+
+// button color
 $green:#e8f5f5;
-// buuton
+// buuton shadow
 $box-shadow-button: rgba(76, 153, 92, 0.3) 0px 8px 24px;
 
-$color:hsl(220deg 7% 92%);
+// font-size5-change
+$h5-font-size:20px;
+
+// color for 5 minutes
+$font-color:#879ba6;
