--- a/bootstrap-assesment-tasks/assets/scss/layout/_header.scss
+++ b/bootstrap-assesment-tasks/assets/scss/layout/_header.scss
@@ -1,6 +1,6 @@
 
   nav {
-    // z-index: 0;
+    z-index: 5;
     .collapse {
       .form-expand {
         position: relative;
@@ -18,6 +18,7 @@
     }
   }
 
+  // profile
 .image-profile {
   width: 45px;
   height: 45px;
@@ -26,7 +27,4 @@
     width: 100%;
   }
   
-}
-.font-size-totification {
-  font-size: 20px;
 }
