--- a/angular/my-app/src/app/parent/home/home.component.html
+++ b/angular/my-app/src/app/parent/home/home.component.html
@@ -12,8 +12,7 @@
 
 <!-- parent to chaild child to parent -->
 <app-homechild [inputFromParent] = userlist
-(userlist)="addItem($event)" >
-</app-homechild>
+(userlist)="addItem($event)" ></app-homechild>
 
 
 
