--- a/angular/my-app/src/app/app.component.html
+++ b/angular/my-app/src/app/app.component.html
@@ -10,7 +10,8 @@
         <app-aside></app-aside>
       </div>
       <main class="border border-primary flex-grow-1 ">
-        <router-outlet></router-outlet></main>
+        <router-outlet></router-outlet>
+      </main>
     </div>
 
   <!-- footer -->
