--- a/angular/my-app/src/app/customer/componet/customer-list/customer-list.component.html
+++ b/angular/my-app/src/app/customer/componet/customer-list/customer-list.component.html
@@ -18,7 +18,7 @@
         <td>{{customer.email}}</td>
         <td>
           <button type="button" class="btn btn-primary" [routerLink]="['../','edit',customer.id]">Edit</button>
-          <button type="button" class="btn btn-primary ms-2" (click)="BookDelete(customer.id)">Delete</button>
+          <button type="button" class="btn btn-primary ms-2" (click)="onDelete(customer.id)">Delete</button>
         </td>
       </tr>
     </tbody>
