--- a/angular/my-app/src/app/core/componet/header/header.component.html
+++ b/angular/my-app/src/app/core/componet/header/header.component.html
@@ -12,15 +12,11 @@
         <a class="nav-link active"  routerLink=""><h5>CONTACT US</h5></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active"  routerLink=""> <h5>USERS</h5></a>
+        <a class="nav-link active"  routerLink="user"> <h5>USERS</h5></a>
       </li>
       <li class="nav-item">
         <a class="nav-link active" routerLink="customer"><h5>CUSTOMERS</h5></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link active" routerLink="directive"><h5>directive</h5></a>
-      </li>
-
     </ul>
   </nav>
   <!-- Navbar -->
