--- a/angular/my-app/src/app/core/componet/navigation/navigation.component.html
+++ b/angular/my-app/src/app/core/componet/navigation/navigation.component.html
@@ -21,9 +21,9 @@
                   <li>
                     <a href="#structuralSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Structural</a>
                     <ul class="collapse list-unstyled" id="structuralSubmenu">
-                      <li><a routerLink="ngform">Ngif</a></li>
-                      <li><a routerLink="ngform">Ngfor</a></li>
-                      <li><a routerLink="ngform">NgSwitch</a></li>
+                      <li><a routerLink="directive/ngif">Ngif</a></li>
+                      <li><a routerLink="directive/ngfor">Ngfor</a></li>
+                      <li><a routerLink="directive/ngswitch">NgSwitch</a></li>
                     </ul>
                   </li>
                   <li>
