--- a/angular/my-app/src/app/directive-type/Structural/ngswitch/ngswitch.component.html
+++ b/angular/my-app/src/app/directive-type/Structural/ngswitch/ngswitch.component.html
@@ -1,1 +1,6 @@
-<p>ngswitch works!</p>
+<div class="p-4">
+    <div class="text-white p-2 ps-4 rounded-pill  " style="background-color:  #7386D5;">
+        <h5>Structural/Ngswitch</h5>
+      </div>
+    
+</div>
