--- a/angular/my-app/src/app/directive-type/attribute/ng-style/ng-style.component.html
+++ b/angular/my-app/src/app/directive-type/attribute/ng-style/ng-style.component.html
@@ -1,1 +1,6 @@
-<p>ng-style works!</p>
+<div class="p-4">
+    <div class="text-white p-2 ps-4 rounded-pill  " style="background-color:  #7386D5;">
+        <h5>Attribute/NgStyle</h5>
+      </div>
+    
+</div>
