--- a/angular/my-app/src/app/directive-type/attribute/ngclass/ngclass.component.html
+++ b/angular/my-app/src/app/directive-type/attribute/ngclass/ngclass.component.html
@@ -1,5 +1,9 @@
-<p>ng-class works!</p>
-<h1>NgClass</h1>
+<div class="p-4">
+  <div class="text-white p-2 ps-4 rounded-pill  " style="background-color:  #7386D5;">
+      <h5>Attribute/NgClass</h5>
+    </div>
+  
+    <h1>NgClass</h1>
 <ul *ngFor="let person of people">
   <li [ngClass]="{
     'text-success':person.country === 'UK',
@@ -8,3 +12,6 @@
   }">{{ person.name }} ({{ person.country }})
   </li>
 </ul>
+</div>
+
+
