--- a/angular/my-app/src/app/core/componet/navigation/navigation.component.html
+++ b/angular/my-app/src/app/core/componet/navigation/navigation.component.html
@@ -42,22 +42,15 @@
                   <li>
                     <a href="#inbuilSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Inbuild Pipe</a>
                     <ul class="collapse list-unstyled" id="inbuilSubmenu">
-                      <li><a href="">CurrencyPipe</a></li>
-                      <li><a href="">DatePipe</a></li>
-                      <li><a href="">DecimalPipe</a></li>
-                      <li><a href="">JsonPipe</a></li>
-                      <li><a href="">LowerCasePipe</a></li>
-                      <li><a href="">UpperCasePipe</a></li>
-                      <li><a href="">PercentPipe</a></li>
-                      <li><a href="">SlicePipe</a></li>
-                      <li><a href="">AsyncPipe</a></li>
+                      <li><a routerLink="pipe/allpipe">all Pipe</a></li>
+                      <
 
                     </ul>
                   </li>
                   <li>
                     <a href="#customeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Custome Pipe</a>
                     <ul class="collapse list-unstyled" id="customeSubmenu">
-                      <li><a href=""> Custome Pipe 1</a></li>
+                      <li><a routerLink="pipe/wordcunter">wordcunter</a></li>
                       <li><a href=""> Custome Pipe 2</a></li>
                     </ul>
                   </li>
