--- a/angular/my-app/src/app/customer/componet/customer-list/customer-list.component.html
+++ b/angular/my-app/src/app/customer/componet/customer-list/customer-list.component.html
@@ -1,4 +1,5 @@
-
+<!-- <p> Word Counter Pipe in action below</p>
+  <h1>{{ customText | wordcount }}</h1> -->
 <div class="mt-4 p-4 h-100">
   <button type="button" class="btn btn-primary" routerLink="../add">Add customer</button><br><br>
   <div class="overflow-auto" style="height: 300px;">
