--- a/angular/my-app/src/app/user/user-form/user-form.component.html
+++ b/angular/my-app/src/app/user/user-form/user-form.component.html
@@ -1,4 +1,4 @@
-<div class="p-4">
+<div class="p-4 overflow-auto" style="height: 500px;">
     <div class="text-white p-2 ps-4 rounded-pill  " style="background-color:  #7386D5;">
         <h5>user-form</h5>
       </div>
