--- a/angular/my-app/src/app/app.component.html
+++ b/angular/my-app/src/app/app.component.html
@@ -4,16 +4,15 @@
     <app-navigation></app-navigation>
   </div>
   <!--===== End Navigation bar ====-->
-  <div class="section flex-grow-1 h-100">
+  <div class="section  d-flex flex-column flex-grow-1 h-100 ">
     <!--===== start header ====-->
     <div class="header">
       <app-header></app-header>
     </div>
-    <main class="flex-grow-1 d-flex flex-column h-100">
+    <main class="flex-grow-1  h-100 overflow-auto">
       <!-- ====== End  header ====-->
-      <div class="h-100">
         <router-outlet></router-outlet>
-      </div>
+      
     </main>
   </div>
 </div>
