--- a/angular/my-app/src/app/home/home.component.html
+++ b/angular/my-app/src/app/home/home.component.html
@@ -2,5 +2,15 @@
     <div class="text-white p-2 ps-4 rounded-pill  " style="background-color:  #7386D5;">
         <h5>Home</h5>
       </div>
-    
+    <div class="">
+      <h4>  Id: {{showDetails.id}}</h4><br>
+      <h4>FirstName: {{ showDetails.firstname | titlecase}}</h4>
+      <h4>FirstName: {{ showDetails.lastname |titlecase}}</h4>
+      <h4>email: {{ showDetails.email}}</h4>
+      <h4>Phone No: {{ showDetails.phoneno}}</h4>
+      <h4>Address: {{ showDetails.address}}</h4>
+      <h4>City: {{ showDetails.city}}</h4>
+      <h4>State: {{ showDetails.state}}</h4>
+      <h4>Pincode: {{ showDetails.pincode}}</h4>
+    </div>
 </div>
