--- a/angular/my-app/src/app/employee/employee-form/employee-form.component.html
+++ b/angular/my-app/src/app/employee/employee-form/employee-form.component.html
@@ -1,18 +1,12 @@
 <div class="container">
-  <h2 class="my-3">{{title}}</h2>
+  <h2 class="my-3">{{ title }}</h2>
   <form [formGroup]="empoyeeform">
     <div class="row">
       <div class="col">
         <div class="form-group">
           <label for="firstname">FirstName:</label>
-          <input
-            type="text"
-            class="form-control"
-            id="firstname"
-            formControlName="firstname"
-            placeholder="Enter firstname"
-            name="firstname"
-            [ngClass]="{
+          <input type="text" class="form-control" id="firstname" formControlName="firstname"
+            placeholder="Enter firstname" name="firstname" [ngClass]="{
               'is-invalid':
                 employee['firstname'].invalid &&
                 (issubmited ||
@@ -23,17 +17,13 @@
                 (issubmited ||
                   employee['firstname'].touched ||
                   employee['firstname'].dirty)
-            }"
-          />
-          <div
-            *ngIf="
+            }" />
+          <div *ngIf="
               employee['firstname'].invalid &&
               (issubmited ||
                 employee['firstname'].touched ||
                 employee['firstname'].dirty)
-            "
-            class="text-danger"
-          >
+            " class="text-danger">
             <div *ngIf="employee['firstname'].errors?.['required']">
               firstname required
             </div>
@@ -46,14 +36,8 @@
       <div class="col">
         <div class="form-group">
           <label for="lastname">LastName:</label>
-          <input
-            type="text"
-            class="form-control"
-            id="lastname"
-            formControlName="lastname"
-            placeholder="Enter lastname"
-            name="lastname"
-            [ngClass]="{
+          <input type="text" class="form-control" id="lastname" formControlName="lastname" placeholder="Enter lastname"
+            name="lastname" [ngClass]="{
               'is-invalid':
                 employee['lastname'].invalid &&
                 (issubmited ||
@@ -64,18 +48,14 @@
                 (issubmited ||
                   employee['lastname'].touched ||
                   employee['lastname'].dirty)
-            }"
-          />
+            }" />
         </div>
-        <div
-          *ngIf="
+        <div *ngIf="
             employee['lastname'].invalid &&
             (issubmited ||
               employee['lastname'].touched ||
               employee['lastname'].dirty)
-          "
-          class="text-danger"
-        >
+          " class="text-danger">
           <div *ngIf="employee['lastname'].errors?.['required']">
             Last Name required
           </div>
@@ -88,14 +68,8 @@
       <div class="col">
         <div class="form-group">
           <label for="phoneno">Phone No:</label>
-          <input
-            type="text"
-            class="form-control"
-            id="phoneno"
-            formControlName="phoneno"
-            placeholder="Enter Phoneno"
-            name="phoneno"
-            [ngClass]="{
+          <input type="text" class="form-control" id="phoneno" formControlName="phoneno" placeholder="Enter Phoneno"
+            name="phoneno" [ngClass]="{
               'is-invalid':
                 employee['phoneno'].invalid &&
                 (issubmited ||
@@ -106,18 +80,14 @@
                 (issubmited ||
                   employee['phoneno'].touched ||
                   employee['phoneno'].dirty)
-            }"
-          />
+            }" />
         </div>
-        <div
-          *ngIf="
+        <div *ngIf="
             employee['phoneno'].invalid &&
             (issubmited ||
               employee['phoneno'].touched ||
               employee['phoneno'].dirty)
-          "
-          class="text-danger"
-        >
+          " class="text-danger">
           <div *ngIf="employee['phoneno'].errors?.['required']">
             Phone No required
           </div>
@@ -126,14 +96,8 @@
       <div class="col">
         <div class="form-group">
           <label for="email">Email:</label>
-          <input
-            type="email"
-            class="form-control"
-            id="email"
-            formControlName="email"
-            placeholder="Enter Email"
-            name="email"
-            [ngClass]="{
+          <input type="email" class="form-control" id="email" formControlName="email" placeholder="Enter Email"
+            name="email" [ngClass]="{
               'is-invalid':
                 employee['email'].invalid &&
                 (issubmited ||
@@ -144,16 +108,12 @@
                 (issubmited ||
                   employee['email'].touched ||
                   employee['email'].dirty)
-            }"
-          />
+            }" />
         </div>
-        <div
-          *ngIf="
+        <div *ngIf="
             employee['email'].invalid &&
             (issubmited || employee['email'].touched || employee['email'].dirty)
-          "
-          class="text-danger"
-        >
+          " class="text-danger">
           <div *ngIf="employee['email'].errors?.['required']">
             Email required
           </div>
@@ -164,14 +124,8 @@
       <div class="col">
         <div class="form-group">
           <label for="address">Address:</label>
-          <input
-            type="text"
-            class="form-control"
-            id="address"
-            formControlName="address"
-            placeholder="Enter Address"
-            name="address"
-            [ngClass]="{
+          <input type="text" class="form-control" id="address" formControlName="address" placeholder="Enter Address"
+            name="address" [ngClass]="{
               'is-invalid':
                 employee['address'].invalid &&
                 (issubmited ||
@@ -182,18 +136,14 @@
                 (issubmited ||
                   employee['address'].touched ||
                   employee['address'].dirty)
-            }"
-          />
+            }" />
         </div>
-        <div
-          *ngIf="
+        <div *ngIf="
             employee['address'].invalid &&
             (issubmited ||
               employee['address'].touched ||
               employee['address'].dirty)
-          "
-          class="text-danger"
-        >
+          " class="text-danger">
           <div *ngIf="employee['address'].errors?.['required']">
             Address required
           </div>
@@ -202,13 +152,7 @@
       <div class="col">
         <div class="form-group">
           <label for="city">City:</label>
-          <input
-            type="text"
-            class="form-control"
-            id="city"
-            formControlName="city"
-            placeholder="Enter City"
-            name="city"
+          <input type="text" class="form-control" id="city" formControlName="city" placeholder="Enter City" name="city"
             [ngClass]="{
               'is-invalid':
                 employee['city'].invalid &&
@@ -220,30 +164,20 @@
                 (issubmited ||
                   employee['city'].touched ||
                   employee['city'].dirty)
-            }"
-          />
+            }" />
         </div>
-        <div
-          *ngIf="
+        <div *ngIf="
             employee['city'].invalid &&
             (issubmited || employee['city'].touched || employee['city'].dirty)
-          "
-          class="text-danger"
-        >
+          " class="text-danger">
           <div *ngIf="employee['city'].errors?.['required']">City required</div>
         </div>
       </div>
       <div class="col">
         <div class="form-group">
           <label for="state">State:</label>
-          <input
-            type="text"
-            class="form-control"
-            id="state"
-            formControlName="state"
-            placeholder="Enter State"
-            name="state"
-            [ngClass]="{
+          <input type="text" class="form-control" id="state" formControlName="state" placeholder="Enter State"
+            name="state" [ngClass]="{
               'is-invalid':
                 employee['state'].invalid &&
                 (issubmited ||
@@ -254,16 +188,12 @@
                 (issubmited ||
                   employee['state'].touched ||
                   employee['state'].dirty)
-            }"
-          />
+            }" />
         </div>
-        <div
-          *ngIf="
+        <div *ngIf="
             employee['state'].invalid &&
             (issubmited || employee['state'].touched || employee['state'].dirty)
-          "
-          class="text-danger"
-        >
+          " class="text-danger">
           <div *ngIf="employee['state'].errors?.['required']">
             State required
           </div>
@@ -272,15 +202,8 @@
       <div class="col">
         <div class="form-group">
           <label for="pincode">State:</label>
-          <input
-            type="text"
-            class="form-control"
-            id="pincode"
-            formControlName="pincode"
-            placeholder="Enter Pin code"
-            name="pincode"
-            required=""
-            [ngClass]="{
+          <input type="text" class="form-control" id="pincode" formControlName="pincode" placeholder="Enter Pin code"
+            name="pincode" required="" [ngClass]="{
               'is-invalid':
                 employee['pincode'].invalid &&
                 (issubmited ||
@@ -291,18 +214,14 @@
                 (issubmited ||
                   employee['pincode'].touched ||
                   employee['pincode'].dirty)
-            }"
-          />
+            }" />
         </div>
-        <div
-          *ngIf="
+        <div *ngIf="
             employee['pincode'].invalid &&
             (issubmited ||
               employee['pincode'].touched ||
               employee['pincode'].dirty)
-          "
-          class="text-danger"
-        >
+          " class="text-danger">
           <div *ngIf="employee['pincode'].errors?.['required']">
             Pincode required
           </div>
@@ -310,31 +229,17 @@
       </div>
     </div>
 
-    <button
-      *ngIf="!id"
-      type="submit"
-      class="btn btn-primary mt-3"
-      (click)="onsubmited()"
-    >
+    <button *ngIf="!id" type="submit" class="btn btn-primary mt-3" (click)="onsubmited()">
       Add
     </button>
-    <button
-    *ngIf="id"
-    type="submit"
-    class="btn btn-primary mt-3"
-    (click)="editesubmited()"
-  >
-    Edite
-  </button>
+    <button *ngIf="id" type="submit" class="btn btn-primary mt-3" (click)="editesubmited()">
+      Edit
+    </button>
     <!-- <button   type="submit" class="btn btn-primary mt-3" (click)="edite()">Edit</button> -->
     <button type="submit" class="btn btn-primary ms-2 mt-3" (click)="reset()">
       Reset
     </button>
-    <button
-      type="submit"
-      class="btn btn-primary ms-2 mt-3"
-      routerLink="../emloyeeList"
-    >
+    <button type="submit" class="btn btn-primary ms-2 mt-3" routerLink="../emloyeeList">
       Close
     </button>
   </form>
