--- a/angular/my-app/src/app/home/home.component.html
+++ b/angular/my-app/src/app/home/home.component.html
@@ -5,7 +5,7 @@
     <div class="">
       <h4>  Id: {{showDetails.id}}</h4><br>
       <h4>FirstName: {{ showDetails.firstname | titlecase}}</h4>
-      <h4>FirstName: {{ showDetails.lastname |titlecase}}</h4>
+      <h4>LastName: {{ showDetails.lastname |titlecase}}</h4>
       <h4>email: {{ showDetails.email}}</h4>
       <h4>Phone No: {{ showDetails.phoneno}}</h4>
       <h4>Address: {{ showDetails.address}}</h4>
