--- a/angular/my-app/src/app/core/componet/header/header.component.html
+++ b/angular/my-app/src/app/core/componet/header/header.component.html
@@ -20,6 +20,9 @@
       <li class="nav-item">
         <a class="nav-link active" routerLink="employee"><h5>EMPLOYEE</h5></a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link active" routerLink="dynamicomponet"><h5>DYNAMIC</h5></a>
+      </li>
     </ul>
   </nav>
   <!-- Navbar -->
